crates/eosio_macros/tests/ui/symbol-bad-format.stderr
error: expected integer literal
 --> $DIR/symbol-bad-format.rs:6:16
  |
6 |     let _ = s!("EOS");
  |                ^^^^^
