crates/eosio_macros/tests/ui/symbol-bad-format.rs
extern crate eosio_macros;

use eosio_macros::s;

fn main() {
    let _ = s!("EOS");
}
